The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

* New --future flag (#182) that activates IS_MINIFW_RELATED, IS_NO_SIGNED_BY,
  IS_NOT_DEB822, and IS_POSTFIX_IPV6_DISABLED.

### Changed

### Fixed

### Deprecated

### Removed

## [25.08.1] 2025-08-19

### Added

* IS_PHPMYADMINAPACHECONF: add quotes and curly-braces to some variables

### Changed

* IS_MINIFW_RELATED: disable regex when not needed
* IS_MINIFW_RELATED: disable check until most servers are fixed

### Fixed

* IS_MINIFW_RELATED: globbing doesn't work inside double-quotes

## [25.08] 2025-08-08

### Added

* Add IS_INTERFACESNETMASK check
* Add IS_WKHTMLTOPDF and IS_LXC_WKHTMLTOPDF (#180)
* Add IS_MINIFW_RELATED (#167)

### Changed

* Enable IS_MINIFWINCLUDES

### Fixed

* IS_LOG2MAILSYSTEMDUNIT: Drop useless /etc/init.d/log2mail check (#178)
* Uniform use of containers_list instead of container_list

## [25.05] 2025-07-20

### Changed

* listupgrade.sh can be in /usr/local/sbin as well as /usr/share/scripts

### Fixed

* [Stretch] IS_MONITORINGCTL: absolute path for monitoringctl (/usr/local/bin not in PATH inside cron)

## [25.05] 2025-05-27

### Changed

* switch to evolibs-shell of Debian version checks
* IS_VARTMPFS does not check Trixie or later
* IS_LSBRELEASE only for Debian < 13

### Fixed

* IS_MONITORINGCTL: absolute path for monitoringctl (/usr/local/bin not in PATH inside cron)
* IS_NRPEPRESSURE: absolute path for monitoringctl (/usr/local/bin not in PATH inside cron)

## [25.04.2] 2025-04-23

### Changed

* IS_NOT_DEB822 + IS_NO_SIGNED_BY: disable check until most servers are fixed

## [25.04.1] 2025-04-23

### Changed

* IS_POSTFIX_IPV6_DISABLED: disable check until most servers are fixed

## [25.04] 2025-04-22

### Added

* Add IS_NOT_DEB822
* Add IS_NO_SIGNED_BY

## [25.03.3] 2025-03-27

### Added
