@@ -7,6 +7,7 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 * New --future flag (#182) that activates IS_MINIFW_RELATED, IS_NO_SIGNED_BY,
   IS_NOT_DEB822, and IS_POSTFIX_IPV6_DISABLED.
+* Support minifirewall managed by systemd
 
 ### Changed
 
